--- a/ac.soton.coda.doc/latex/coda-user_agreement.tex
+++ b/ac.soton.coda.doc/latex/coda-user_agreement.tex
@@ -1,4 +1,4 @@
-February 2nd, 2016
+March 23rd, 2016
 
 \ifplastex
 \subsubsection{Usage Of Content}
@@ -17,18 +17,10 @@ All intellectual property rights existing in this information remain
 the property of the Secretary of State for Defence of the United
 Kingdom of Great Britain and Northern Ireland. The information may not
 be used or disclosed otherwise that is provided for by the
-above-mentioned licence without the prior written permission of the
+licence without the prior written permission of the
 Secretary of State, as represented by the Copyright Unit, Defence
 Intellectual Property Rights, Poplar 2 \#2214, MOD Abbey Wood South,
 Bristol BS34 8JH, UNITED KINGDOM.
-
-CODA is provided on the basis that the US Government will disclose to
-the UK Ministry of Defence (via AWE) any information, test results,
-modifications or further developments based on or derived from the
-disclosed information and will authorise the use of such information
-for UK Government purposes on the same terms (i.e. under the terms of
-the Creative Commons Attribution-NonCommercial- ShareAlike 4.0
-International License (CC BY NC SA 4.0)).
 
 For the avoidance of doubt, the Secretary of State of Defence for the
 United Kingdom of Great Britain and Northern Ireland does not provide
@@ -58,10 +50,6 @@ project is provided to you under the terms and conditions of one of
 the following licences.
 
 \begin{itemize}
-\item The \emph{Creative Commons Attribution-NonCommercial-ShareAlike 4.0
-    International License} (CC BY NC SA 4.0).  A copy of the \emph{CC BY NC SA
-    4.0} is available at \url{https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode}.
-
 \item \emph{Eclipse Public License Version 1.0} (EPL) (available at 
    \url{http://www.eclipse.org/legal/epl-v10.html})
 \end{itemize}
@@ -95,7 +83,7 @@ terms and conditions) that govern your use of the associated
 Content in that directory.
 
 THE FEATURE LICENCES, AND FEATURE UPDATE LICENCES MAY REFER
-TO THE CC BY NC SA 4.0, EPL OR OTHER LICENCE AGREEMENTS, NOTICES OR TERMS AND
+TO THE EPL OR OTHER LICENCE AGREEMENTS, NOTICES OR TERMS AND
 CONDITIONS.
 
 IT IS YOUR OBLIGATION TO READ AND ACCEPT ALL SUCH TERMS AND
