gold.oracle extension changed to gold_oracle

--- a/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-validationAndSimulation.tex
+++ b/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-validationAndSimulation.tex
@@ -137,7 +137,7 @@ The gold and playback runs are saved into a folder, called Oracle in the project
 
 Gold runs:
 
-\texttt{<Machine name>.test.<timestamp>.gold.oracle}
+\texttt{<Machine name>.test.<timestamp>.gold_oracle}
 
 Playback runs:
 
