fix problem in CODA licence text

--- a/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-legal.tex
+++ b/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-legal.tex
@@ -18,14 +18,6 @@ Secretary of State, as represented by the Copyright Unit, Defence
 Intellectual Property Rights, Poplar 2 \#2214, MOD Abbey Wood South,
 Bristol BS34 8JH, UNITED KINGDOM.
 
-CODA is provided on the basis that the US Government will disclose to
-the UK Ministry of Defence (via AWE) any information, test results,
-modifications or further developments based on or derived from the
-disclosed information and will authorise the use of such information
-for UK Government purposes on the same terms (i.e. under the terms of
-the Creative Commons Attribution-NonCommercial- ShareAlike 4.0
-International License (CC BY NC SA 4.0)).
-
 For the avoidance of doubt, the Secretary of State of Defence for the
 United Kingdom of Great Britain and Northern Ireland does not provide
 any indemnity, and does not warrant the accuracy or completeness of
@@ -44,10 +36,6 @@ project is provided to you under the terms and conditions of one of
 the following licences.
 
 \begin{itemize}
-\item The \emph{Creative Commons Attribution-NonCommercial-ShareAlike 4.0
-    International License} (CC BY NC SA 4.0).  A copy of the \emph{CC BY NC SA
-    4.0} is available at \url{https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode}.
-
 \item \emph{Eclipse Public License Version 1.0} (EPL) (available at 
    \url{http://www.eclipse.org/legal/epl-v10.html})
 \end{itemize}
@@ -63,7 +51,6 @@ locations:
 
 \begin{itemize}
 \item Feature directories
-
 \item Shared-licence feature \texttt{ac.soton.coda.licence}
 \end{itemize}
 
@@ -81,7 +68,7 @@ terms and conditions) that govern your use of the associated
 Content in that directory.
 
 THE FEATURE LICENCES, AND FEATURE UPDATE LICENCES MAY REFER
-TO THE CC BY NC SA 4.0, EPL OR OTHER LICENCE AGREEMENTS, NOTICES OR TERMS AND
+TO THE EPL OR OTHER LICENCE AGREEMENTS, NOTICES OR TERMS AND
 CONDITIONS.
 
 IT IS YOUR OBLIGATION TO READ AND ACCEPT ALL SUCH TERMS AND
